Fix up spacing for horizontal actions menu.

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -301,6 +301,8 @@ section.page {
 	 */
 	div.page-header {
 
+		margin: 18px 0;
+
 		ul {
 			list-style: none;
 			margin: 0;
